<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.jinqihang.traveler.utils.TitleLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.jinqihang.traveler.utils.TitleLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_phone"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:id="@+id/login_phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:orientation="horizontal"
                android:background="#eeeeee">

                <TextView
                    android:id="@+id/phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/phone_label"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:layout_gravity="center"
                    android:background="#0000"
                    android:textSize="14sp"
                    android:hint="@string/hint_phone"/>

                <ImageView
                    android:id="@+id/iv_del_item"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:visibility="invisible"
                    android:onClick="onClick"
                    android:padding="10dp"
                    android:src="@drawable/delete_account"
                    android:layout_gravity="center"/>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:background="#eeeeee">

                <TextView
                    android:id="@+id/password_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="密    码"
                    android:layout_marginLeft="10dp"/>

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:layout_gravity="center"
                    android:background="#0000"
                    android:textSize="14sp"
                    android:hint="@string/hint_password"/>

            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/register"
                android:textSize="20sp"
                android:background="@color/colorOrange"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
