<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#10dddddd"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.youth.banner.Banner
                    android:id="@+id/flight_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp">
                </com.youth.banner.Banner>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true">

                    <RelativeLayout
                        android:id="@+id/single_flight_layout"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="#10dddddd">
                        <TextView
                            android:id="@+id/single_flight_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/single_flight"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/round_flight_layout"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="#10dddddd">
                        <TextView
                            android:id="@+id/round_flight_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/round_flight"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/multi_flight_layout"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:background="#10dddddd">
                        <TextView
                            android:id="@+id/multi_flight_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/multi_flight"
                            android:layout_centerInParent="true"/>

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/flight_content"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="#ffffff">

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
